--- a/style.css
+++ b/style.css
@@ -1,19 +1,151 @@
-.button {
-    background-color: #00CCAD;
-    border: none;
-    color: white;
-    padding: 10px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    margin: 4px 2px;
-    cursor: pointer;
-	width:100%;
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+
+body {
+    background-color: #FFF7E0;
 }
+
+#header {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	background: #C24F3F;
+}
+
+#title {
+	font-family: 'Playfair Display', serif;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 50px;
+	font-size: 25px;
+	font-weight: bold;
+	display: inline;
+}
+
+
+#note {
+	font-family: 'Playfair Display', serif;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 50px;
+	font-size: 15px;
+	display: inline;
+}
+
+#footer {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	height: 50px;
+	background: #C24F3F;
+}
+
+#footer-text {
+	font-family: 'Playfair Display', serif;
+	color: #FFFFFF;
+	text-align: center;
+	line-height: 50px;
+	font-size: 15px;
+}
+
+#content {
+	font-family: 'Playfair Display', serif;
+	color: black;
+	font-size: 15px;
+	padding: 60px 10px;
+}
+
 .input {
-	padding: 10px 2px;
-	width:100%;	
+	width: 50%;
+	height: 30px;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #9CB1C2;
 }
-.cstats {float:right;}
-.zstats {float:left;}
+
+.button {
+	height: 33px;
+	border-width: 0;
+	color: #000000;
+	text-align: center;
+	display: inline-block;
+	font-size: 16px;
+	text-decoration: none;
+  margin: 2px;
+}
+
+
+.button:hover {
+	border-width: 1px;
+	border: solid;
+	border-color: #6a7883;
+}
+
+.form {
+	position: relative;
+	text-align: center;
+}
+
+#data {
+	font-family: 'Playfair Display', serif;
+	color: black;
+	font-size: 15px;
+	padding: 20px 10px;
+}
+
+.main-square {
+  width: 100%;
+}
+
+.main-square:after {
+  content: "\a\a";
+  white-space: pre;
+}
+
+.main-square-title {
+  font-family: 'Playfair Display', serif;
+  text-align: center;
+  line-height: 40px;
+  font-size: 20px;
+  background: #D8C468;
+  font-weight: bolder;
+  color: #453E17;
+}
+
+.sub-square-title {
+  background: #FFE980;
+  font-family: 'Playfair Display', serif;
+  color: #000000;
+  text-align: center;
+  line-height: 30px;
+  font-size: 17px;
+  width: 100%;
+  font-weight: bold;
+}
+
+.sub-square {
+  background: #FFF0A6;
+  font-family: 'Playfair Display', serif;
+  color: #000000;
+  text-align: center;
+  line-height: 20px;
+  font-size: 15px;
+  width: 100%;
+}
+
+.sub-square-text:after {
+  content: "\a\a";
+  white-space: pre;
+}
+
+.sub-square-text:before {
+  content: "\a";
+  white-space: pre;
+}
+
+.sub-square:after {
+  content: "\a\a";
+  white-space: pre;
+}
